--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
   pinput: ^4.0.0
+  flutter_widget_from_html: ^0.15.0
+  lottie: ^3.1.2
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
