--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,15 @@ dependencies:
   flutter_widget_from_html: ^0.15.0
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
