--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,16 @@ dependencies:
   flutter_widget_from_html: ^0.15.0
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
-  json_annotation: ^4.9.0
+  marquee: ^2.2.3
+
+dependency_overrides:
+  fading_edge_scrollview: ^4.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-  json_serializable: ^6.8.0
-  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
