--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter_widget_from_html: ^0.15.0
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
-  marquee: ^2.2.3
+  flutter_staggered_animations: ^1.1.1
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
