--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
   flutter_staggered_animations: ^1.1.1
+  custom_refresh_indicator: ^3.1.0
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
