--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,12 @@ if (flutterVersionName == null) {
     flutterVersionName = "1.0"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "com.order.bombaychowpati"
     compileSdk = flutter.compileSdkVersion
@@ -32,6 +38,7 @@ android {
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 
+
     defaultConfig {
         applicationId = "com.order.bombaychowpati"
         minSdk = flutter.minSdkVersion
@@ -40,9 +47,18 @@ android {
         versionName = flutterVersionName
     }
 
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+
     buildTypes {
         release {
-            signingConfig = signingConfigs.debug
+            signingConfigs.release
         }
     }
 }
