--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bombay_chowpati
 description: "Order the products of Bombay Chowpati."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -18,8 +18,8 @@ dependencies:
   responsive_sizer: ^3.3.1
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
-  pinput: ^4.0.0
-  flutter_widget_from_html: ^0.15.0
+  pinput: ^5.0.0
+  flutter_widget_from_html: ^0.15.1
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
   flutter_staggered_animations: ^1.1.1
@@ -32,7 +32,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
