--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: bombay_chowpati
 description: "Order the products of Bombay Chowpati."
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   get_storage: ^2.1.1
-  dio: ^5.4.3+1
+  dio: ^5.5.0+1
   responsive_sizer: ^3.3.1
   intl: ^0.19.0
   font_awesome_flutter: ^10.7.0
@@ -23,7 +23,9 @@ dependencies:
   lottie: ^3.1.2
   cached_network_image: ^3.3.1
   flutter_staggered_animations: ^1.1.1
-  custom_refresh_indicator: ^3.1.0
+  custom_refresh_indicator: ^3.1.2
+  upgrader: ^10.3.0
+  url_launcher: ^6.3.0
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
